# Agentic-QA

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  README.md  app.py  pyproject.toml
.github/workflows/: main.yaml
.github/workflows /: main.yaml
application/: chatbot.py
configs/: config.py
src/Agentic_QA.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/agents/: analyzer_agent.py  comparator_agent.py  qa_agent.py  vehicle_sales_visualizer_agent.py
src/handlers/: ocr_handler.py  pdf_handler.py  visualizer_handler.py  youtube_handler.py
src/utils/: announcement_dates_extraction.py  ocr_content_extraction.py  pdf_content_extraction.py  text_splitter.py  vehicles_sold_per_year_extraction.py  youtube_content_extraction.py
src/vectorizers/: ocr_vectorizer.py  pdf_vectorizer.py  youtube_vectorizer.py
